--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,6 +23,13 @@
         <mat-icon matListItemIcon>business</mat-icon>
         Companies
       </a>
+
+      <a mat-list-item routerLink="/todos" routerLinkActive="drawer-list-item-active"
+      (click)="drawer.close()">
+        <mat-icon matListItemIcon>assignments</mat-icon>
+        Todos
+      </a>
+
     </mat-nav-list>
   </mat-sidenav>
 
