--- a/client/src/app/todos/todo-list.component.scss
+++ b/client/src/app/todos/todo-list.component.scss
@@ -15,3 +15,27 @@
 .input-field {
   margin-bottom: 20px;
 }
+
+.add-todo-fab {
+  position: fixed;
+  bottom: 15px;
+  right: 30px;
+}
+
+.todo-cards-container {
+  width: 100%;
+  position: relative;
+}
+
+.todo-card {
+  margin-bottom: 10px;
+  flex: 1 1 280px;
+}
+
+.search-card {
+  margin-bottom: 10px;
+}
+
+.mat-radio-button {
+  margin: 0 12px;
+}
