fix contains and cypress e2e tests.

--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -19,7 +19,7 @@
           <mat-form-field class="input-field">
             <mat-label>Contains</mat-label>
             <input matInput data-test="todoBodyInput" placeholder="Filter by contains"
-              [(ngModel)]="todoBody" (input)="getTodosFromServer()">
+              [(ngModel)]="todoBody" (input)="updateFilter()">
             <mat-hint>Filtered on server</mat-hint>
           </mat-form-field>
 
