--- a/client/src/app/todos/todo-list.component.scss
+++ b/client/src/app/todos/todo-list.component.scss
@@ -39,3 +39,31 @@
 .mat-radio-button {
   margin: 0 12px;
 }
+
+
+.todo-list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  max-width: 1250px;
+
+  cursor: pointer;
+}
+
+.todo-list-item[status=true] {
+  background-color: #a7f0a7; /* Green background for true (complete) status */
+}
+
+.todo-list-item[status=false] {
+  background-color: #f0a7a7; /* Red background for false (incomplete) status */
+}
+
+.todo-list-owner,
+.todo-list-status,
+.todo-list-body,
+.todo-list-category {
+  font-size: 16px; /* Adjust the font size as needed */
+}
